Getting rid of old switch/case directive